euphony-dsp/src/snapshots/euphony_dsp__unary__Exp2.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Exp2",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 13,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns `2^(self)`\n",
    fork: None,
}
