euphony-dsp/src/snapshots/euphony_dsp__unary__ExpM1.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "ExpM1",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 14,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Returns `e^(self) - 1` in a way that is accurate even if the number is close to zero.\n",
}
