euphony-dsp/src/snapshots/euphony_dsp__unary__Floor.snap
---
source: euphony-dsp/src/unary.rs
assertion_line: 117
expression: node
---
Node {
    name: "Floor",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 15,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the largest integer less than or equal to a number.\n",
}
