euphony-dsp/src/snapshots/euphony_dsp__unary__Ln.snap
---
source: euphony-dsp/src/unary.rs
assertion_line: 129
expression: node
---
Node {
    name: "Ln",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 17,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the natural logarithm of the number.\n",
}
