euphony-dsp/src/snapshots/euphony_dsp__unary__Ln1p.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Ln1p",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 18,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns ln(1+n) (natural logarithm) more accurately than if the operations\n were performed separately.\n",
    fork: None,
}
