euphony-dsp/src/snapshots/euphony_dsp__unary__Log10.snap
---
source: euphony-dsp/src/unary.rs
assertion_line: 142
expression: node
---
Node {
    name: "Log10",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 19,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the base 10 logarithm of the number.\n",
}
