euphony-dsp/src/snapshots/euphony_dsp__unary__Log2.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Log2",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 20,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the base 2 logarithm of the number.\n",
    fork: None,
}
