euphony-dsp/src/snapshots/euphony_dsp__unary__Neg.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Neg",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 33,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " The unary negation operator `-`.\n",
    fork: None,
}
