euphony-dsp/src/snapshots/euphony_dsp__unary__Norm.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Norm",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 21,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Normalizes a number.\n\n * `-0.0` will be converted into `0.0`\n * `NAN` will be converted into `0.0`\n * `INFINITY` will be converted into `MAX`\n * `NEG_INFINITY` will be converted into `MIN`\n",
    fork: None,
}
