euphony-dsp/src/snapshots/euphony_dsp__unary__Pass.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Pass",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 34,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Passes the input signal to the output signal\n",
    fork: None,
}
