euphony-dsp/src/snapshots/euphony_dsp__unary__Recip.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Recip",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 22,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Takes the reciprocal (inverse) of a number, 1/x.\n",
}
